# multi-domain-research-agent

./: .env.example  .gitignore  PHASE_0_COMPLETION_REPORT.md  README.md  docker-compose.yml  latest_prd.txt  prds.txt  pyproject.toml  roadmap.md  tools.txt  updated_prd.md
app/: main.py
app/api/routes/: research.py  sources.py  users.py
app/config/: database.py  settings.py
app/utils/: monitoring.py
