[tool.poetry]
name = "multi-domain-research-agent"
version = "0.1.0"
description = "A sophisticated, 100% free and open-source research agent using modern Python frameworks"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11,<3.14"
# Core Framework Stack
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"

# AI & LLM Integration
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langgraph = "^0.2.0"
ollama = "^0.1.7"
google-generativeai = "^0.3.2"

# Database & Caching  
psycopg2-binary = "^2.9.0"
redis = "^5.0.1"
chromadb = "^0.4.18"

# HTTP & API Clients
httpx = "^0.25.2"
aiohttp = "^3.9.1"
requests-cache = "^1.1.1"

# Data Processing
pandas = "^2.1.4"
numpy = "^1.26.2"

# Monitoring & Observability
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
loguru = "^0.7.2"
watchdog = "^3.0.0"

# UI & CLI
streamlit = "^1.28.2"
plotly = "^5.17.0"
rich = "^13.7.0"
typer = "^0.9.0"
click = "^8.1.7"

# Development Tools
python-dotenv = "^1.0.0"
pre-commit = "^3.6.0"

[tool.poetry.group.dev.dependencies]
# Testing & Quality
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.7"
mypy = "^1.7.0"

[tool.poetry.scripts]
research-agent = "cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true 